HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncTypePathUnapplied/Source/Main.uv
//! Rejected async type specimen for an unapplied Async type path.

public procedure asyncTypePathUnappliedReference() -> Async {
    return
}
